default/objects/Loan_Contact__c/Loan_Contact__c.object-meta.xml
<CustomObject>
    <label>Loan Contact</label>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Loan Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>