default/objects/Loan_Contact__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>