default/objects/Loan_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Applications</relationshipLabel>
    <relationshipName>Contact2Loans</relationshipName>
    <type>Lookup</type>
</CustomField>