default/objects/Loan_Contact__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipName>Contact2Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>