default/objects/Loan_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Type__c</columns>
    <columns>Loan_Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>